sdk-docs_versioned_docs/version-19.0.0/enums/Generated/Types/MultiSigTx/MultiSigTx.md
---
id: "MultiSigTx"
title: "Enumeration: MultiSigTx"
sidebar_label: "MultiSigTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).MultiSigTx

## Enumeration Members

### AcceptMultisigSignerAsIdentity

• **AcceptMultisigSignerAsIdentity** = ``"multiSig.acceptMultisigSignerAsIdentity"``

#### Defined in

[generated/types.ts:405](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L405)

___

### AcceptMultisigSignerAsKey

• **AcceptMultisigSignerAsKey** = ``"multiSig.acceptMultisigSignerAsKey"``

#### Defined in

[generated/types.ts:406](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L406)

___

### AddMultisigSigner

• **AddMultisigSigner** = ``"multiSig.addMultisigSigner"``

#### Defined in

[generated/types.ts:407](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L407)

___

### AddMultisigSignersViaCreator

• **AddMultisigSignersViaCreator** = ``"multiSig.addMultisigSignersViaCreator"``

#### Defined in

[generated/types.ts:409](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L409)

___

### ApproveAsIdentity

• **ApproveAsIdentity** = ``"multiSig.approveAsIdentity"``

#### Defined in

[generated/types.ts:401](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L401)

___

### ApproveAsKey

• **ApproveAsKey** = ``"multiSig.approveAsKey"``

#### Defined in

[generated/types.ts:402](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L402)

___

### ChangeSigsRequired

• **ChangeSigsRequired** = ``"multiSig.changeSigsRequired"``

#### Defined in

[generated/types.ts:411](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L411)

___

### CreateMultisig

• **CreateMultisig** = ``"multiSig.createMultisig"``

#### Defined in

[generated/types.ts:396](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L396)

___

### CreateOrApproveProposalAsIdentity

• **CreateOrApproveProposalAsIdentity** = ``"multiSig.createOrApproveProposalAsIdentity"``

#### Defined in

[generated/types.ts:397](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L397)

___

### CreateOrApproveProposalAsKey

• **CreateOrApproveProposalAsKey** = ``"multiSig.createOrApproveProposalAsKey"``

#### Defined in

[generated/types.ts:398](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L398)

___

### CreateProposalAsIdentity

• **CreateProposalAsIdentity** = ``"multiSig.createProposalAsIdentity"``

#### Defined in

[generated/types.ts:399](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L399)

___

### CreateProposalAsKey

• **CreateProposalAsKey** = ``"multiSig.createProposalAsKey"``

#### Defined in

[generated/types.ts:400](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L400)

___

### ExecuteScheduledProposal

• **ExecuteScheduledProposal** = ``"multiSig.executeScheduledProposal"``

#### Defined in

[generated/types.ts:414](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L414)

___

### MakeMultisigPrimary

• **MakeMultisigPrimary** = ``"multiSig.makeMultisigPrimary"``

#### Defined in

[generated/types.ts:413](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L413)

___

### MakeMultisigSecondary

• **MakeMultisigSecondary** = ``"multiSig.makeMultisigSecondary"``

#### Defined in

[generated/types.ts:415](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L415)

___

### MakeMultisigSigner

• **MakeMultisigSigner** = ``"multiSig.makeMultisigSigner"``

#### Defined in

[generated/types.ts:412](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L412)

___

### RejectAsIdentity

• **RejectAsIdentity** = ``"multiSig.rejectAsIdentity"``

#### Defined in

[generated/types.ts:403](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L403)

___

### RejectAsKey

• **RejectAsKey** = ``"multiSig.rejectAsKey"``

#### Defined in

[generated/types.ts:404](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L404)

___

### RemoveMultisigSigner

• **RemoveMultisigSigner** = ``"multiSig.removeMultisigSigner"``

#### Defined in

[generated/types.ts:408](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L408)

___

### RemoveMultisigSignersViaCreator

• **RemoveMultisigSignersViaCreator** = ``"multiSig.removeMultisigSignersViaCreator"``

#### Defined in

[generated/types.ts:410](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L410)
