sdk-docs_versioned_docs/version-26.1.x/enums/Generated/Types/MultiSigTx/MultiSigTx.md
---
id: "MultiSigTx"
title: "Enumeration: MultiSigTx"
sidebar_label: "MultiSigTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).MultiSigTx

## Enumeration Members

### AcceptMultisigSigner

• **AcceptMultisigSigner** = ``"multiSig.acceptMultisigSigner"``

#### Defined in

[generated/types.ts:425](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L425)

___

### AcceptMultisigSignerAsIdentity

• **AcceptMultisigSignerAsIdentity** = ``"multiSig.acceptMultisigSignerAsIdentity"``

#### Defined in

[generated/types.ts:409](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L409)

___

### AcceptMultisigSignerAsKey

• **AcceptMultisigSignerAsKey** = ``"multiSig.acceptMultisigSignerAsKey"``

#### Defined in

[generated/types.ts:410](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L410)

___

### AddAdmin

• **AddAdmin** = ``"multiSig.addAdmin"``

#### Defined in

[generated/types.ts:431](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L431)

___

### AddMultisigSigner

• **AddMultisigSigner** = ``"multiSig.addMultisigSigner"``

#### Defined in

[generated/types.ts:411](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L411)

___

### AddMultisigSigners

• **AddMultisigSigners** = ``"multiSig.addMultisigSigners"``

#### Defined in

[generated/types.ts:426](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L426)

___

### AddMultisigSignersViaAdmin

• **AddMultisigSignersViaAdmin** = ``"multiSig.addMultisigSignersViaAdmin"``

#### Defined in

[generated/types.ts:428](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L428)

___

### AddMultisigSignersViaCreator

• **AddMultisigSignersViaCreator** = ``"multiSig.addMultisigSignersViaCreator"``

#### Defined in

[generated/types.ts:413](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L413)

___

### Approve

• **Approve** = ``"multiSig.approve"``

#### Defined in

[generated/types.ts:423](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L423)

___

### ApproveAsIdentity

• **ApproveAsIdentity** = ``"multiSig.approveAsIdentity"``

#### Defined in

[generated/types.ts:405](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L405)

___

### ApproveAsKey

• **ApproveAsKey** = ``"multiSig.approveAsKey"``

#### Defined in

[generated/types.ts:406](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L406)

___

### ApproveJoinIdentity

• **ApproveJoinIdentity** = ``"multiSig.approveJoinIdentity"``

#### Defined in

[generated/types.ts:435](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L435)

___

### ChangeSigsRequired

• **ChangeSigsRequired** = ``"multiSig.changeSigsRequired"``

#### Defined in

[generated/types.ts:415](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L415)

___

### ChangeSigsRequiredViaAdmin

• **ChangeSigsRequiredViaAdmin** = ``"multiSig.changeSigsRequiredViaAdmin"``

#### Defined in

[generated/types.ts:430](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L430)

___

### ChangeSigsRequiredViaCreator

• **ChangeSigsRequiredViaCreator** = ``"multiSig.changeSigsRequiredViaCreator"``

#### Defined in

[generated/types.ts:420](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L420)

___

### CreateMultisig

• **CreateMultisig** = ``"multiSig.createMultisig"``

#### Defined in

[generated/types.ts:400](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L400)

___

### CreateOrApproveProposalAsIdentity

• **CreateOrApproveProposalAsIdentity** = ``"multiSig.createOrApproveProposalAsIdentity"``

#### Defined in

[generated/types.ts:401](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L401)

___

### CreateOrApproveProposalAsKey

• **CreateOrApproveProposalAsKey** = ``"multiSig.createOrApproveProposalAsKey"``

#### Defined in

[generated/types.ts:402](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L402)

___

### CreateProposal

• **CreateProposal** = ``"multiSig.createProposal"``

#### Defined in

[generated/types.ts:422](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L422)

___

### CreateProposalAsIdentity

• **CreateProposalAsIdentity** = ``"multiSig.createProposalAsIdentity"``

#### Defined in

[generated/types.ts:403](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L403)

___

### CreateProposalAsKey

• **CreateProposalAsKey** = ``"multiSig.createProposalAsKey"``

#### Defined in

[generated/types.ts:404](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L404)

___

### ExecuteScheduledProposal

• **ExecuteScheduledProposal** = ``"multiSig.executeScheduledProposal"``

#### Defined in

[generated/types.ts:418](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L418)

___

### JoinIdentity

• **JoinIdentity** = ``"multiSig.joinIdentity"``

#### Defined in

[generated/types.ts:436](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L436)

___

### MakeMultisigPrimary

• **MakeMultisigPrimary** = ``"multiSig.makeMultisigPrimary"``

#### Defined in

[generated/types.ts:417](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L417)

___

### MakeMultisigSecondary

• **MakeMultisigSecondary** = ``"multiSig.makeMultisigSecondary"``

#### Defined in

[generated/types.ts:419](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L419)

___

### MakeMultisigSigner

• **MakeMultisigSigner** = ``"multiSig.makeMultisigSigner"``

#### Defined in

[generated/types.ts:416](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L416)

___

### Reject

• **Reject** = ``"multiSig.reject"``

#### Defined in

[generated/types.ts:424](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L424)

___

### RejectAsIdentity

• **RejectAsIdentity** = ``"multiSig.rejectAsIdentity"``

#### Defined in

[generated/types.ts:407](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L407)

___

### RejectAsKey

• **RejectAsKey** = ``"multiSig.rejectAsKey"``

#### Defined in

[generated/types.ts:408](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L408)

___

### RemoveAdmin

• **RemoveAdmin** = ``"multiSig.removeAdmin"``

#### Defined in

[generated/types.ts:437](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L437)

___

### RemoveAdminViaAdmin

• **RemoveAdminViaAdmin** = ``"multiSig.removeAdminViaAdmin"``

#### Defined in

[generated/types.ts:432](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L432)

___

### RemoveCreatorControls

• **RemoveCreatorControls** = ``"multiSig.removeCreatorControls"``

#### Defined in

[generated/types.ts:421](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L421)

___

### RemoveMultisigSigner

• **RemoveMultisigSigner** = ``"multiSig.removeMultisigSigner"``

#### Defined in

[generated/types.ts:412](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L412)

___

### RemoveMultisigSigners

• **RemoveMultisigSigners** = ``"multiSig.removeMultisigSigners"``

#### Defined in

[generated/types.ts:427](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L427)

___

### RemoveMultisigSignersViaAdmin

• **RemoveMultisigSignersViaAdmin** = ``"multiSig.removeMultisigSignersViaAdmin"``

#### Defined in

[generated/types.ts:429](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L429)

___

### RemoveMultisigSignersViaCreator

• **RemoveMultisigSignersViaCreator** = ``"multiSig.removeMultisigSignersViaCreator"``

#### Defined in

[generated/types.ts:414](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L414)

___

### RemovePayer

• **RemovePayer** = ``"multiSig.removePayer"``

#### Defined in

[generated/types.ts:433](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L433)

___

### RemovePayerViaPayer

• **RemovePayerViaPayer** = ``"multiSig.removePayerViaPayer"``

#### Defined in

[generated/types.ts:434](https://github.com/PolymeshAssociation/polymesh-sdk/blob/b55e63737/src/generated/types.ts#L434)
